// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/quick-search/QuickSearchItem should not render parent folder or separator if no parentName or parentFolderRenderer 1`] = `
<span
  className="item-subtext"
>
  <span
    className="txt-ellipsis"
    title="{date, date, medium} by {user}"
  >
    {date, date, medium} by {user}
  </span>
</span>
`;

exports[`features/quick-search/QuickSearchItem should render Link for item info when shouldNavigateOnItemClick is passed in 1`] = `
<QuickSearchItem
  itemData={
    Object {
      "iconType": "boxnote",
      "id": "321",
      "name": "hitesting.boxnote",
      "nameWithMarkedQuery": "hi<mark>test<mark>ing.boxnote",
      "parentName": "parent",
      "type": "file",
      "updatedBy": "Yo",
      "updatedDate": 123,
    }
  }
  shouldNavigateOnItemClick={true}
>
  <QuickSearchItem
    intl={
      Object {
        "formatDate": [Function],
        "formatMessage": [Function],
      }
    }
    itemData={
      Object {
        "iconType": "boxnote",
        "id": "321",
        "name": "hitesting.boxnote",
        "nameWithMarkedQuery": "hi<mark>test<mark>ing.boxnote",
        "parentName": "parent",
        "type": "file",
        "updatedBy": "Yo",
        "updatedDate": 123,
      }
    }
    shouldNavigateOnItemClick={true}
  >
    <DatalistItem
      className="quick-search-item"
    >
      <li
        className="datalist-item quick-search-item"
        id="datalistitem31"
        role="option"
      >
        <ItemIcon
          iconType="boxnote"
          title={
            <FormattedMessage
              defaultMessage="File"
              id="boxui.quickSearch.file"
            />
          }
        >
          <IconFileBoxNote
            height={32}
            title={
              <FormattedMessage
                defaultMessage="File"
                id="boxui.quickSearch.file"
              />
            }
            width={32}
          >
            <IconFileBase
              baseClassName="icon-file-box-note"
              height={32}
              title={
                <FormattedMessage
                  defaultMessage="File"
                  id="boxui.quickSearch.file"
                />
              }
              width={32}
            >
              <AccessibleSVG
                className="icon-file-box-note "
                height={32}
                title={
                  <FormattedMessage
                    defaultMessage="File"
                    id="boxui.quickSearch.file"
                  />
                }
                viewBox="0 0 32 32"
                width={32}
              >
                <svg
                  aria-labelledby="icon32-title"
                  className="icon-file-box-note "
                  focusable="false"
                  height={32}
                  role="img"
                  viewBox="0 0 32 32"
                  width={32}
                >
                  <title
                    id="icon32-title"
                  >
                    <FormattedMessage
                      defaultMessage="File"
                      id="boxui.quickSearch.file"
                    >
                      <div />
                    </FormattedMessage>
                  </title>
                  <path
                    d="M25 27H7V5h13l5 5v17z"
                    fill="#fff"
                  />
                  <path
                    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
                    fill="#0061d5"
                  />
                  <path
                    d="M18.85 14.5H10.1a.75.75 0 0 0 0 1.5h7.7z"
                    fill="#980de0"
                  />
                  <path
                    d="M16.7 17.5h-6.6a.76.76 0 0 0 0 1.52h5.59z"
                    fill="#0061d5"
                  />
                  <path
                    d="M14.7 20.5h-4.6a.75.75 0 0 0 0 1.5H14l.05-.25c.05-.15.05-.4.15-.5z"
                    fill="#00c9c1"
                  />
                  <path
                    d="M19.7 14.95a2.57 2.57 0 0 0 .6.6 2.17 2.17 0 0 0 .75.35l-4.6 6.45-.3.3-1.55 1.15c-.1.1-.2 0-.15-.1l.45-1.9a1.5 1.5 0 0 1 .2-.4zm1-1.5a1 1 0 0 1 1.25.9 6.38 6.38 0 0 1-.5.85 4.86 4.86 0 0 1-.75-.3 1.7 1.7 0 0 1-.65-.65z"
                    fill="#000123"
                  />
                </svg>
              </AccessibleSVG>
            </IconFileBase>
          </IconFileBoxNote>
        </ItemIcon>
        <span
          className="item-info"
        >
          <Link
            className="item-name"
            href="/file/321"
            onClick={[Function]}
            title="hitesting.boxnote"
          >
            <LinkBase
              className="link item-name"
              href="/file/321"
              onClick={[Function]}
              title="hitesting.boxnote"
            >
              <a
                className="link item-name"
                href="/file/321"
                onClick={[Function]}
                title="hitesting.boxnote"
              >
                hi
                <mark
                  className="search-term"
                  key="1"
                >
                  test
                </mark>
                ing.boxnote
              </a>
            </LinkBase>
          </Link>
          <span
            className="item-subtext"
          >
            <IconSmallFolder
              title={
                <FormattedMessage
                  defaultMessage="Parent Folder"
                  id="boxui.quickSearch.parentFolder"
                />
              }
            >
              <AccessibleSVG
                className="icon-small-folder "
                height={9}
                title={
                  <FormattedMessage
                    defaultMessage="Parent Folder"
                    id="boxui.quickSearch.parentFolder"
                  />
                }
                viewBox="0 0 12 9"
                width={12}
              >
                <svg
                  aria-labelledby="icon33-title"
                  className="icon-small-folder "
                  focusable="false"
                  height={9}
                  role="img"
                  viewBox="0 0 12 9"
                  width={12}
                >
                  <title
                    id="icon33-title"
                  >
                    <FormattedMessage
                      defaultMessage="Parent Folder"
                      id="boxui.quickSearch.parentFolder"
                    >
                      <div />
                    </FormattedMessage>
                  </title>
                  <path
                    d="M11.1 1H6.2c-.1 0-.1 0-.2-.1L5.3.1c0-.1-.1-.1-.2-.1H.9C.4 0 0 .5 0 1v7.3c0 .4.4.7.9.7h10.3c.4 0 .8-.3.8-.7V2c0-.6-.4-1-.9-1zM11 8.1H1V4h10v4.1zM11 3H1V1.3c0-.2.1-.3.3-.3h3.5s.1 0 .2.1l.7.8c0 .1.1.1.2.1H11v1z"
                    fill="#999"
                    fillRule="evenodd"
                  />
                </svg>
              </AccessibleSVG>
            </IconSmallFolder>
            <span
              className="parent-folder"
            >
              parent
            </span>
            <span
              className="separator"
            >
              ·
            </span>
            <span
              className="txt-ellipsis"
              title="{date, date, medium} by {user}"
            >
              {date, date, medium} by {user}
            </span>
          </span>
        </span>
      </li>
    </DatalistItem>
  </QuickSearchItem>
</QuickSearchItem>
`;

exports[`features/quick-search/QuickSearchItem should render span for item info when shouldNavigateOnItemClick is not passed in 1`] = `
<QuickSearchItem
  itemData={
    Object {
      "iconType": "boxnote",
      "id": "321",
      "name": "hitesting.boxnote",
      "nameWithMarkedQuery": "hi<mark>test<mark>ing.boxnote",
      "parentName": "parent",
      "type": "file",
      "updatedBy": "Yo",
      "updatedDate": 123,
    }
  }
>
  <QuickSearchItem
    intl={
      Object {
        "formatDate": [Function],
        "formatMessage": [Function],
      }
    }
    itemData={
      Object {
        "iconType": "boxnote",
        "id": "321",
        "name": "hitesting.boxnote",
        "nameWithMarkedQuery": "hi<mark>test<mark>ing.boxnote",
        "parentName": "parent",
        "type": "file",
        "updatedBy": "Yo",
        "updatedDate": 123,
      }
    }
  >
    <DatalistItem
      className="quick-search-item"
    >
      <li
        className="datalist-item quick-search-item"
        id="datalistitem34"
        role="option"
      >
        <ItemIcon
          iconType="boxnote"
          title={
            <FormattedMessage
              defaultMessage="File"
              id="boxui.quickSearch.file"
            />
          }
        >
          <IconFileBoxNote
            height={32}
            title={
              <FormattedMessage
                defaultMessage="File"
                id="boxui.quickSearch.file"
              />
            }
            width={32}
          >
            <IconFileBase
              baseClassName="icon-file-box-note"
              height={32}
              title={
                <FormattedMessage
                  defaultMessage="File"
                  id="boxui.quickSearch.file"
                />
              }
              width={32}
            >
              <AccessibleSVG
                className="icon-file-box-note "
                height={32}
                title={
                  <FormattedMessage
                    defaultMessage="File"
                    id="boxui.quickSearch.file"
                  />
                }
                viewBox="0 0 32 32"
                width={32}
              >
                <svg
                  aria-labelledby="icon35-title"
                  className="icon-file-box-note "
                  focusable="false"
                  height={32}
                  role="img"
                  viewBox="0 0 32 32"
                  width={32}
                >
                  <title
                    id="icon35-title"
                  >
                    <FormattedMessage
                      defaultMessage="File"
                      id="boxui.quickSearch.file"
                    >
                      <div />
                    </FormattedMessage>
                  </title>
                  <path
                    d="M25 27H7V5h13l5 5v17z"
                    fill="#fff"
                  />
                  <path
                    d="M20 4H7a1 1 0 0 0-1 1v22a1 1 0 0 0 1 1h18a1 1 0 0 0 1-1V9.89zm5 23H7V5h13v4a1 1 0 0 0 1 1h4z"
                    fill="#0061d5"
                  />
                  <path
                    d="M18.85 14.5H10.1a.75.75 0 0 0 0 1.5h7.7z"
                    fill="#980de0"
                  />
                  <path
                    d="M16.7 17.5h-6.6a.76.76 0 0 0 0 1.52h5.59z"
                    fill="#0061d5"
                  />
                  <path
                    d="M14.7 20.5h-4.6a.75.75 0 0 0 0 1.5H14l.05-.25c.05-.15.05-.4.15-.5z"
                    fill="#00c9c1"
                  />
                  <path
                    d="M19.7 14.95a2.57 2.57 0 0 0 .6.6 2.17 2.17 0 0 0 .75.35l-4.6 6.45-.3.3-1.55 1.15c-.1.1-.2 0-.15-.1l.45-1.9a1.5 1.5 0 0 1 .2-.4zm1-1.5a1 1 0 0 1 1.25.9 6.38 6.38 0 0 1-.5.85 4.86 4.86 0 0 1-.75-.3 1.7 1.7 0 0 1-.65-.65z"
                    fill="#000123"
                  />
                </svg>
              </AccessibleSVG>
            </IconFileBase>
          </IconFileBoxNote>
        </ItemIcon>
        <span
          className="item-info"
        >
          <span
            className="item-name"
            title="hitesting.boxnote"
          >
            hi
            <mark
              className="search-term"
              key="1"
            >
              test
            </mark>
            ing.boxnote
          </span>
          <span
            className="item-subtext"
          >
            <IconSmallFolder
              title={
                <FormattedMessage
                  defaultMessage="Parent Folder"
                  id="boxui.quickSearch.parentFolder"
                />
              }
            >
              <AccessibleSVG
                className="icon-small-folder "
                height={9}
                title={
                  <FormattedMessage
                    defaultMessage="Parent Folder"
                    id="boxui.quickSearch.parentFolder"
                  />
                }
                viewBox="0 0 12 9"
                width={12}
              >
                <svg
                  aria-labelledby="icon36-title"
                  className="icon-small-folder "
                  focusable="false"
                  height={9}
                  role="img"
                  viewBox="0 0 12 9"
                  width={12}
                >
                  <title
                    id="icon36-title"
                  >
                    <FormattedMessage
                      defaultMessage="Parent Folder"
                      id="boxui.quickSearch.parentFolder"
                    >
                      <div />
                    </FormattedMessage>
                  </title>
                  <path
                    d="M11.1 1H6.2c-.1 0-.1 0-.2-.1L5.3.1c0-.1-.1-.1-.2-.1H.9C.4 0 0 .5 0 1v7.3c0 .4.4.7.9.7h10.3c.4 0 .8-.3.8-.7V2c0-.6-.4-1-.9-1zM11 8.1H1V4h10v4.1zM11 3H1V1.3c0-.2.1-.3.3-.3h3.5s.1 0 .2.1l.7.8c0 .1.1.1.2.1H11v1z"
                    fill="#999"
                    fillRule="evenodd"
                  />
                </svg>
              </AccessibleSVG>
            </IconSmallFolder>
            <span
              className="parent-folder"
            >
              parent
            </span>
            <span
              className="separator"
            >
              ·
            </span>
            <span
              className="txt-ellipsis"
              title="{date, date, medium} by {user}"
            >
              {date, date, medium} by {user}
            </span>
          </span>
        </span>
      </li>
    </DatalistItem>
  </QuickSearchItem>
</QuickSearchItem>
`;
